--- a/201607/2016-07-07.html
+++ b/201607/2016-07-07.html
@@ -35,7 +35,7 @@
   </h1>
 
   <section class="article-meta">
-    <p class="article-date">July 08 2016</p>
+    <p class="article-date">July 07 2016</p>
   </section>
 
   <section class="article-entry">
@@ -71,7 +71,7 @@
 <li><code>&lt;ol&gt;</code>(ordered list)是<strong>有序列表</strong>，<code>&lt;ul&gt;</code>(unordered list) 是<strong>无序列表</strong>，两者可相互嵌套构成多级列表</li>
 <li><strong>定义列表</strong>格式为<code>&lt;dl&gt;&lt;dt&gt;定义术语&lt;/dt&gt;&lt;dd&gt;定义描述&lt;/dd&gt;...&lt;/dl&gt;</code></li>
 <li>字符实体用于在html文件中表示特殊符号，比如用<code>&amp;lt;</code>来表示<code>&lt;</code>，<code>&amp;gt</code>表示<code>&gt;</code>，<code>&amp;amp</code>来表示<code>&amp;</code>。字符实体都有编号，可以使用编号而不是实体名，比如<code>&amp;#100</code>，更多实体清单在 <a href="http://www.w3schools.com/tags/ref_entities.asp" target="_blank" rel="external">W3School</a> 或 <a href="http://www.unicode.org/charts" target="_blank" rel="external">Unicode</a> 网站可以找到</li>
-<li><code>&lt;pre&gt;</code> 和 <code>&lt;code&gt;</code> 元素可以用户结构化显示代码。</li>
+<li><code>&lt;pre&gt;</code> 和 <code>&lt;code&gt;</code> 元素可以用于结构化显示代码。</li>
 </ul>
 
   </section>
