--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201607/2016-07-09.html">前端之旅第 4 天</a>
+      </h1>
+
+      <div class="article-entry">
+        学习慕课网的HTML+CSS基础课程
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 09 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201607/2016-07-08.html">前端之旅第 3 天</a>
+      </h1>
+
+      <div class="article-entry">
+        学习 Sublime Text 的使用，以及看书
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 08 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201607/2016-07-07.html">前端之旅第 2 天</a>
       </h1>
 
@@ -65,7 +93,7 @@
       </div>
 
       <div class="article-meta">
-        <span class="article-date">Jul 08 2016</span>
+        <span class="article-date">Jul 07 2016</span>
       </div>
     </article>
   
@@ -79,7 +107,7 @@
       </div>
 
       <div class="article-meta">
-        <span class="article-date">Jul 07 2016</span>
+        <span class="article-date">Jul 06 2016</span>
       </div>
     </article>
   
@@ -122,34 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Mar 24 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201603/stand-poems.html">立场诗</a>
-      </h1>
-
-      <div class="article-entry">
-        —— 德兰修女
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Mar 06 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201603/start-learn-oc-languae.html">iOS学习笔记之OC基础</a>
-      </h1>
-
-      <div class="article-entry">
-        归纳了我学习《Objective-C编程》一书OC基础部分的要点。
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Mar 03 2016</span>
       </div>
     </article>
   
