--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201607/2016-07-10.html">前端之旅第 5 天</a>
+      </h1>
+
+      <div class="article-entry">
+        学习 《Head First HTML & CSS》第5、6章
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 10 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201607/2016-07-09.html">前端之旅第 4 天</a>
       </h1>
 
@@ -75,7 +89,7 @@
       </h1>
 
       <div class="article-entry">
-        学习 Sublime Text 的使用，以及看书
+        学习 Sublime Text 的使用，以及《Head First HTML & CSS》第4章
       </div>
 
       <div class="article-meta">
@@ -89,7 +103,7 @@
       </h1>
 
       <div class="article-entry">
-        学习 MDN 的教程，看书
+        学习 MDN 的教程，《Head First HTML & CSS》第2、3章
       </div>
 
       <div class="article-meta">
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">May 30 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201603/start-learn-oc-advanced.html">iOS开发之OC高级笔记</a>
-      </h1>
-
-      <div class="article-entry">
-        总结了一些我学习《Objective-C编程》一书OC高级部分的笔记。
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Mar 24 2016</span>
       </div>
     </article>
   
