--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201607/2016-07-12.html">前端之旅第 7 天</a>
+      </h1>
+
+      <div class="article-entry">
+        《Head First HTML & CSS》第9章——盒模型
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 12 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201607/2016-07-11.html">前端之旅第 6 天</a>
       </h1>
 
@@ -139,23 +153,9 @@
       </div>
     </article>
   
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-05.html">温故PHP之Cookie和Session</a>
-      </h1>
-
-      <div class="article-entry">
-        
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 05 2016</span>
-      </div>
-    </article>
-  
 
   <nav class="page-nav">
-  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
+  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
 </nav>
 
 </main>
