--- a/201607/2016-07-12.html
+++ b/201607/2016-07-12.html
@@ -91,7 +91,7 @@
 <ul>
 <li>查询中还有很多属性可以使用，如min-device-width以及设备的方向orientation</li>
 <li>max-device-width和min-device-width媒体属性依赖于设备的实际屏幕而不是你的浏览器窗口宽度，而max-width和min-width则表示浏览器窗口的最大和最小宽度而不是屏幕大小。</li>
-<li>可以在<a href="http://www.w3.org/TR/css3-mediaqueries网站了解css3媒体查询规范细节" target="_blank" rel="external">http://www.w3.org/TR/css3-mediaqueries网站了解css3媒体查询规范细节</a></li>
+<li>可以在<a href="http://www.w3.org/TR/css3-mediaqueries" target="_blank" rel="external">http://www.w3.org/TR/css3-mediaqueries</a> 网站了解css3媒体查询规范细节</li>
 </ul>
 <blockquote>
 <p>IE8以及以前版本浏览器不支持媒体查询</p>
