--- a/index.html
+++ b/index.html
@@ -57,7 +57,35 @@
   
     <article>
       <h1 class="article-title">
-        <a href="/201607/2016-07-17.html">前端之旅第 12 天</a>
+        <a href="/201607/2016-07-19-20.html">前端之旅第 14、15 天</a>
+      </h1>
+
+      <div class="article-entry">
+        《Head First HTML & CSS》13、14章 —— 表格、列表、表单
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 20 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201607/2016-07-18.html">前端之旅第 13 天</a>
+      </h1>
+
+      <div class="article-entry">
+        《Head First HTML & CSS》12章 —— html5标记、Video
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Jul 18 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201607/2016-07-14-17.html">前端之旅第 9~12 天</a>
       </h1>
 
       <div class="article-entry">
@@ -122,34 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Jul 10 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-09.html">前端之旅第 4 天</a>
-      </h1>
-
-      <div class="article-entry">
-        学习慕课网的HTML+CSS基础课程
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 09 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-08.html">前端之旅第 3 天</a>
-      </h1>
-
-      <div class="article-entry">
-        学习 Sublime Text 的使用，以及《Head First HTML & CSS》第4章
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 08 2016</span>
       </div>
     </article>
   
