--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201608/2016-0729-0808.html">前端之旅第 24~34 天</a>
+      </h1>
+
+      <div class="article-entry">
+        百度前端春季学院的大作业，才完成前两个页面，摔
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Aug 08 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201607/2016-07-26-28.html">前端之旅第 21~23 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Jul 17 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-13.html">前端之旅第 8 天</a>
-      </h1>
-
-      <div class="article-entry">
-        《Head First HTML & CSS》第10章 —— div和span
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 13 2016</span>
       </div>
     </article>
   
