--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201608/2016-08-08.html">圣杯布局和双飞翼布局</a>
+      </h1>
+
+      <div class="article-entry">
+        介绍圣杯布局和双飞翼布局的异同点
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Aug 08 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201607/2016-07-26-28.html">前端之旅第 21~23 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Jul 18 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-14-17.html">前端之旅第 9~12 天</a>
-      </h1>
-
-      <div class="article-entry">
-        《Head First HTML & CSS》第11章 —— 布局和定位
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 17 2016</span>
       </div>
     </article>
   
