--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201608/2016-08-13.html">前端之旅第 35~40 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成了百度前端学院 春季的一个入门大作业
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Aug 13 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201608/2016-0729-0808.html">前端之旅第 24~34 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Jul 20 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-18.html">前端之旅第 13 天</a>
-      </h1>
-
-      <div class="article-entry">
-        《Head First HTML & CSS》12章 —— html5标记、Video
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 18 2016</span>
       </div>
     </article>
   
