--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201609/2016-09-10.html">前端之旅第 57~68 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成《精通CSS》、准备学习JS高级编程
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Sep 10 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201608/2016-08-29.html">前端之旅第 55、56 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Jul 28 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-23-25.html">前端之旅第 18~20 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成了维基大学的Challenge 3、4
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 25 2016</span>
       </div>
     </article>
   
