--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201609/2016-09-19.html">前端之旅第 77 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成JS高级编程前5章的简要笔记
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Sep 19 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201609/2016-09-18.html">前端之旅第 69~76 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成JS高级编程前5章
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Sep 18 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201609/2016-09-10.html">前端之旅第 57~68 天</a>
       </h1>
 
@@ -125,37 +153,9 @@
       </div>
     </article>
   
-    <article>
-      <h1 class="article-title">
-        <a href="/201608/2016-08-08.html">圣杯布局和双飞翼布局</a>
-      </h1>
-
-      <div class="article-entry">
-        介绍圣杯布局和双飞翼布局的异同点
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Aug 08 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201607/2016-07-26-28.html">前端之旅第 21~23 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成了维基大学的Challenge，开始看《精通CSS》，学习双飞翼和圣马杯布局
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Jul 28 2016</span>
-      </div>
-    </article>
-  
 
   <nav class="page-nav">
-  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><a class="page-number" href="/page/4/">4</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
+  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><span class="space">&hellip;</span><a class="page-number" href="/page/5/">5</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
 </nav>
 
 </main>
