--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201609/2016-09-26.html">前端之旅第 78~83 天</a>
+      </h1>
+
+      <div class="article-entry">
+        这一周完成JS高级编程第6章的简要笔记
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Sep 26 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201609/2016-09-19.html">前端之旅第 77 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Aug 13 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201608/2016-0729-0808.html">前端之旅第 24~34 天</a>
-      </h1>
-
-      <div class="article-entry">
-        百度前端春季学院的大作业，才完成前两个页面，摔
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Aug 08 2016</span>
       </div>
     </article>
   
