--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201610/2016-10-10.html">前端之旅第 96 天</a>
+      </h1>
+
+      <div class="article-entry">
+        JS高级编程的14章+开始做IFE的题目
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Oct 10 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201610/2016-10-09.html">前端之旅第 84~95 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成了JS高级编程的7至13章
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Oct 09 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201609/2016-09-26.html">前端之旅第 78~83 天</a>
       </h1>
 
@@ -122,34 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Aug 29 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201608/2016-08-27.html">前端之旅第 41~54 天</a>
-      </h1>
-
-      <div class="article-entry">
-        看《精通CSS》3~9章，以及学习智能社的js视频教程
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Aug 27 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201608/2016-08-13.html">前端之旅第 35~40 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成了百度前端学院 春季的一个入门大作业
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Aug 13 2016</span>
       </div>
     </article>
   
