--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201610/2016-10-20.html">前端之旅第 97~106 天</a>
+      </h1>
+
+      <div class="article-entry">
+        
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Oct 20 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201610/2016-10-10.html">前端之旅第 96 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Sep 10 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201608/2016-08-29.html">前端之旅第 55、56 天</a>
-      </h1>
-
-      <div class="article-entry">
-        徒手实现图片轮播效果
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Aug 29 2016</span>
       </div>
     </article>
   
