--- a/201610/2016-10-10.html
+++ b/201610/2016-10-10.html
@@ -39,7 +39,7 @@
   </section>
 
   <section class="article-entry">
-    <p>今天完成了JS高程的第14章，并且开始做2015的百度前端春季学院任务JS部分。<br>看了一篇学习资料 <a href="http://www.ibm.com/developerworks/cn/web/1308_caiys_jsload/index.html" target="_blank" rel="external">JavaScript 的性能优化：加载和执行</a></p>
+    <p>今天完成了JS高程的第14章，并且开始做百度前端学院2015任务二：JS部分。<br>看了一篇学习资料 <a href="http://www.ibm.com/developerworks/cn/web/1308_caiys_jsload/index.html" target="_blank" rel="external">JavaScript 的性能优化：加载和执行</a></p>
 <p>概要如下：</p>
 <ul>
 <li><p>每个文件必须等到前一个文件下载并执行完成才会开始下载。在这些文件逐个下载过程中，用户看到的是一片空白的页面。</p>
