--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201610/2016-10-30.html">前端之旅第 107~116 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完结《JS高级编程》一书
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Oct 30 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201610/2016-10-20.html">前端之旅第 97~106 天</a>
       </h1>
 
       <div class="article-entry">
-        
+        完成了《JS高级编程》15~22章
       </div>
 
       <div class="article-meta">
@@ -75,7 +89,7 @@
       </h1>
 
       <div class="article-entry">
-        JS高级编程的14章+开始做IFE的题目
+        《JS高级编程》第14章+开始做IFE的任务二
       </div>
 
       <div class="article-meta">
@@ -89,7 +103,7 @@
       </h1>
 
       <div class="article-entry">
-        完成了JS高级编程的7至13章
+        完成了《JS高级编程》7~13章
       </div>
 
       <div class="article-meta">
@@ -103,7 +117,7 @@
       </h1>
 
       <div class="article-entry">
-        这一周完成JS高级编程第6章的简要笔记
+        完成《JS高级编程》第6章，以及简要笔记
       </div>
 
       <div class="article-meta">
@@ -117,7 +131,7 @@
       </h1>
 
       <div class="article-entry">
-        完成JS高级编程前5章的简要笔记
+        完成《JS高级编程》1~5章的简要笔记
       </div>
 
       <div class="article-meta">
@@ -131,7 +145,7 @@
       </h1>
 
       <div class="article-entry">
-        完成JS高级编程前5章
+        完成《JS高级编程》1~5章
       </div>
 
       <div class="article-meta">
@@ -139,23 +153,9 @@
       </div>
     </article>
   
-    <article>
-      <h1 class="article-title">
-        <a href="/201609/2016-09-10.html">前端之旅第 57~68 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成《精通CSS》、准备学习JS高级编程
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Sep 10 2016</span>
-      </div>
-    </article>
-  
 
   <nav class="page-nav">
-  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><span class="space">&hellip;</span><a class="page-number" href="/page/5/">5</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
+  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><a class="page-number" href="/page/4/">4</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
 </nav>
 
 </main>
