--- a/201610/2016-10-30.html
+++ b/201610/2016-10-30.html
@@ -39,7 +39,16 @@
   </section>
 
   <section class="article-entry">
-    <p>在25号左右看完了JS《JS高级编程》一书，在26号开始刷<a href="http://www.imooc.com/course/programdetail/pid/32" target="_blank" rel="external">慕课网的前端计划</a>，但直接跳过了HTML、CSS、JS的初级部分，本想看完DOM事件后完成IFE2015任务二的部分，但是27号下午开始感冒了，28号高烧腰痛难忍不能坐立，甚至下午出去逛超市差不多是挪着步子回来的，本打算第二天去医院挂个急诊，结果29号好多了，本以为痊愈了，但晚上开始口苦鼻塞、头痛欲裂，侧夜难眠，30早上起来整个嘴唇都脱皮了，感觉上火比较严重，但是整个人感觉好多了，下午去药房随便拿了点药了事。我都觉得自己奇怪，病痛都差不多痊愈了才去买药来吃，想来也是因为自己忍受不了去医院挂号的麻烦。<br>接下来希望尽快完成IFE2015任务二</p>
+    <p>在25号左右看完了JS《JS高级编程》一书。内容简要如下：</p>
+<ul>
+<li>23 离线应用与客户端缓存<ul>
+<li>数据存储：Cookie、sessionStorage、localStorage、IndexedDB</li>
+</ul>
+</li>
+<li>24 最佳实践</li>
+<li>25 新兴的API</li>
+</ul>
+<p>在26号开始刷<a href="http://www.imooc.com/course/programdetail/pid/32" target="_blank" rel="external">慕课网的前端计划</a>，但直接跳过了HTML、CSS、JS的初级部分，本想看完DOM事件后完成IFE2015任务二的部分，但是27号下午开始感冒了，28号高烧腰痛难忍不能坐立，甚至下午出去逛超市差不多是挪着步子回来的，本打算第二天去医院挂个急诊，结果29号好多了，本以为痊愈了，但晚上开始口苦鼻塞、头痛欲裂，侧夜难眠，30早上起来整个嘴唇都脱皮了，感觉上火比较严重，但是整个人感觉好多了，下午去药房随便拿了点药了事。我都觉得自己奇怪，病痛都差不多痊愈了才去买药来吃，想来也是因为自己忍受不了去医院挂号的麻烦。<br>接下来希望尽快完成IFE2015任务二</p>
 
   </section>
 </article>
