--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201611/2016-11-06.html">前端之旅第 117~123 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成IFE 2015任务2
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Nov 06 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201610/2016-10-30.html">前端之旅第 107~116 天</a>
       </h1>
 
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Sep 19 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201609/2016-09-18.html">前端之旅第 69~76 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成《JS高级编程》1~5章
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Sep 18 2016</span>
       </div>
     </article>
   
