--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201612/2016-12-08.html">前端之旅第 124~154 天</a>
+      </h1>
+
+      <div class="article-entry">
+        重构 IFE 2015 任务二，《CSS权威指南》5章，《JS语言精粹》5章
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Dec 08 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201611/2016-11-06.html">前端之旅第 117~123 天</a>
       </h1>
 
       <div class="article-entry">
-        完成IFE 2015任务2
+        完成 IFE 2015 任务二
       </div>
 
       <div class="article-meta">
@@ -139,23 +153,9 @@
       </div>
     </article>
   
-    <article>
-      <h1 class="article-title">
-        <a href="/201609/2016-09-19.html">前端之旅第 77 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成《JS高级编程》1~5章的简要笔记
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Sep 19 2016</span>
-      </div>
-    </article>
-  
 
   <nav class="page-nav">
-  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><a class="page-number" href="/page/4/">4</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
+  <span class="page-number current">1</span><a class="page-number" href="/page/2/">2</a><a class="page-number" href="/page/3/">3</a><span class="space">&hellip;</span><a class="page-number" href="/page/5/">5</a><a class="extend next" rel="next" href="/page/2/">Next &rarr;</a>
 </nav>
 
 </main>
