--- a/201611/2016-11-06.html
+++ b/201611/2016-11-06.html
@@ -39,16 +39,21 @@
   </section>
 
   <section class="article-entry">
-    <p>这几天将之前未完成的IFE 2015 任务2完成了，但是代码结构和编程思想都不是很理想，尤其是看了当时IFE团队review了IFE 2015的同学们的代码，指出的一些问题以及改进建议<br>我也对自己的代码中有的问题进行了小结：</p>
+    <p>这几天将之前未完成的IFE 2015 任务二完成了，但是代码结构和编程思想都不是很理想，尤其是看了当时IFE团队review了IFE 2015的同学们的代码，指出的一些问题以及改进建议，<a href="https://github.com/baidu-ife/ife/blob/master/2015_spring/task/task0002/review/IFE-review.md" target="_blank" rel="external">IFE Team review地址</a>。甚至还给出了<a href="https://github.com/baidu-ife/ife/tree/master/2015_spring/task/task0002/review/demo" target="_blank" rel="external">参考代码</a>，目前为止我没有只看了util js部分，其他都还没看。<br>我也对自己的代码中有的问题进行了小结：</p>
 <ul>
 <li>代码：完成任务的时候图一时方便，所以css和js都直接写到了相应的标签中而没有单独写到各自的文件中，因为我认为这不是当下最要紧的问题</li>
-<li>编程思想：虽然代码中做到了结构行为样式分离，但是JS代码混成了一团，耦合度高，而且还是完全在使用以前的面向过程的编程思路，连最基本的使用函数分解任务降低耦合度都没有做到<br>针对以上出现的问题，接下来几天想将部分代码进行重构和调整。<br>一下是完成的任务二的小练习1、2、4、5的Demo，之所以没有做小练习3-轮播，是因为我之前做过同样的东西<ul>
-<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_1.html" target="_blank" rel="external">1:文本框</a></li>
-<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_2.html" target="_blank" rel="external">2:倒计时</a></li>
-<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_4.html" target="_blank" rel="external">4:Auto suggestion</a></li>
-<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_5.html" target="_blank" rel="external">5:界面拖拽</a></li>
+<li>编程思想：虽然代码中做到了结构行为样式分离，但是JS代码混成了一团，耦合度高，而且还是完全在使用以前的面向过程的编程思路，连最基本的使用函数分解任务降低耦合度都没有做到<br>针对以上出现的问题，接下来几天想将部分代码进行重构和调整。</li>
 </ul>
-</li>
+<p>以下是完成的任务二的小练习1、2、4、5的Demo，之所以没有做小练习3-轮播，是因为我之前做过同样的东西：</p>
+<ul>
+<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_1.html" target="_blank" rel="external">1. 文本框</a></li>
+<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_2.html" target="_blank" rel="external">2. 倒计时</a></li>
+<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_4.html" target="_blank" rel="external">4. Auto suggestion</a></li>
+<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_5.html" target="_blank" rel="external">5. 界面拖拽</a></li>
+</ul>
+<p>——2016.12.08更新——-<br>更新：重构了任务2的第3个小练习，地址如下：</p>
+<ul>
+<li><a href="https://github.com/Archmee/Front-End-Demo/blob/master/ife_task/ife_task_2/task0002_3.html" target="_blank" rel="external">3. 轮播</a></li>
 </ul>
 
   </section>
