--- a/201612/2016-12-08.html
+++ b/201612/2016-12-08.html
@@ -57,7 +57,7 @@
 <ol>
 <li>提取兴趣爱好<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_1.jpg" alt="提取兴趣爱好"></li>
 <li>倒计时<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_2.jpg" alt="倒计时"></li>
-<li>轮播图<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_3.jpg" alt="轮播图"></li>
+<li>轮播图(图片来自jd.com，侵删)<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_3.jpg" alt="轮播图"></li>
 <li>输入提示框<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_4.jpg" alt="输入提示框"></li>
 <li>拖拽界面交互<br><img src="https://raw.githubusercontent.com/Archmee/lkd2d97zvb5fvz89feyhwr98v/master/gitblog/images/task2_5.jpg" alt="拖拽界面交互"></li>
 </ol>
