--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
   
     <article>
       <h1 class="article-title">
-        <a href="/201612/2016-12-08.html">前端之旅第 124~154 天</a>
+        <a href="/201612/2016-12-11.html">前端之旅第 154~157 天</a>
+      </h1>
+
+      <div class="article-entry">
+        归纳完成ife2015任务二遇到问题和解决方法
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Dec 11 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201612/2016-12-07.html">前端之旅第 124~153 天</a>
       </h1>
 
       <div class="article-entry">
@@ -65,7 +79,7 @@
       </div>
 
       <div class="article-meta">
-        <span class="article-date">Dec 08 2016</span>
+        <span class="article-date">Dec 07 2016</span>
       </div>
     </article>
   
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Oct 09 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201609/2016-09-26.html">前端之旅第 78~83 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成《JS高级编程》第6章，以及简要笔记
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Sep 26 2016</span>
       </div>
     </article>
   
