--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
   
     <article>
       <h1 class="article-title">
-        <a href="/201612/2016-12-11.html">前端之旅第 154~157 天</a>
+        <a href="/201612/2016-12-12.html">前端之旅第 158 天</a>
+      </h1>
+
+      <div class="article-entry">
+        《javascript语言精粹》简要笔记
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Dec 12 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201612/2016-12-11.html">前端之旅第 155~157 天</a>
       </h1>
 
       <div class="article-entry">
@@ -71,7 +85,7 @@
   
     <article>
       <h1 class="article-title">
-        <a href="/201612/2016-12-07.html">前端之旅第 124~153 天</a>
+        <a href="/201612/2016-12-08.html">前端之旅第 124~154 天</a>
       </h1>
 
       <div class="article-entry">
@@ -79,7 +93,7 @@
       </div>
 
       <div class="article-meta">
-        <span class="article-date">Dec 07 2016</span>
+        <span class="article-date">Dec 08 2016</span>
       </div>
     </article>
   
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Oct 10 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201610/2016-10-09.html">前端之旅第 84~95 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成了《JS高级编程》7~13章
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Oct 09 2016</span>
       </div>
     </article>
   
