--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201612/2016-12-27.html">前端之旅第 159~173 天</a>
+      </h1>
+
+      <div class="article-entry">
+        写了几个漂亮的菜单效果，和一个手风琴图片效果
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Dec 26 2016</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201612/2016-12-12.html">前端之旅第 158 天</a>
       </h1>
 
       <div class="article-entry">
-        《javascript语言精粹》简要笔记
+        完结《javascript语言精粹》，及其简要笔记
       </div>
 
       <div class="article-meta">
@@ -136,20 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Oct 20 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201610/2016-10-10.html">前端之旅第 96 天</a>
-      </h1>
-
-      <div class="article-entry">
-        《JS高级编程》第14章+开始做IFE的任务二
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Oct 10 2016</span>
       </div>
     </article>
   
