--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
   
     <article>
       <h1 class="article-title">
+        <a href="/201702/2017-02-27.html">前端之旅第 209~233 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成IFE2015 task3的SPA应用
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Feb 25 2017</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
+        <a href="/201702/2017-02-01.html">前端之旅第 186~208 天</a>
+      </h1>
+
+      <div class="article-entry">
+        完成IFE2015 task3的SPA应用界面布局工作
+      </div>
+
+      <div class="article-meta">
+        <span class="article-date">Feb 01 2017</span>
+      </div>
+    </article>
+  
+    <article>
+      <h1 class="article-title">
         <a href="/201612/2016-12-27.html">前端之旅第 159~173 天</a>
       </h1>
 
@@ -122,34 +150,6 @@
 
       <div class="article-meta">
         <span class="article-date">Nov 06 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201610/2016-10-30.html">前端之旅第 107~116 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完结《JS高级编程》一书
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Oct 30 2016</span>
-      </div>
-    </article>
-  
-    <article>
-      <h1 class="article-title">
-        <a href="/201610/2016-10-20.html">前端之旅第 97~106 天</a>
-      </h1>
-
-      <div class="article-entry">
-        完成了《JS高级编程》15~22章
-      </div>
-
-      <div class="article-meta">
-        <span class="article-date">Oct 20 2016</span>
       </div>
     </article>
   
