--- a/201612/2016-12-12.html
+++ b/201612/2016-12-12.html
@@ -141,7 +141,7 @@
 <li>第二个可选参数是基数，建议总是带上10作为基数</li>
 <li>js没有真正的数组</li>
 <li><p>js中的众多假值</p>
-<p>  | 值 | 类型 |<br>  |:——–|:——–|<br>  | 0 | Number |<br>  | NaN | Number |<br>  | ‘’ | String |<br>  | false | Boolean |<br>  | null | Object |<br>  | undefined | Undefined |</p>
+<p>  | 值 | 类型 |<br>  | ——– | ——– |<br>  | 0 | Number |<br>  | NaN | Number |<br>  | ‘’ | String |<br>  | false | Boolean |<br>  | null | Object |<br>  | undefined | Undefined |</p>
 </li>
 <li>hasOwnProperty可以被重写覆盖</li>
 <li>js中的对象永远不会是真的空对象</li>
