--- a/201612/2016-12-12.html
+++ b/201612/2016-12-12.html
@@ -140,9 +140,43 @@
 <li>Unicode把一对字符视为一个单一字符，js认为一对字符是两个不同的字符</li>
 <li>第二个可选参数是基数，建议总是带上10作为基数</li>
 <li>js没有真正的数组</li>
-<li><p>js中的众多假值</p>
-<p>  | 值 | 类型 |<br>  | ——– | ——– |<br>  | 0 | Number |<br>  | NaN | Number |<br>  | ‘’ | String |<br>  | false | Boolean |<br>  | null | Object |<br>  | undefined | Undefined |</p>
-</li>
+<li>js中的众多假值，如下表：</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>值</th>
+<th>类型</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>0</td>
+<td>Number</td>
+</tr>
+<tr>
+<td>NaN</td>
+<td>Number</td>
+</tr>
+<tr>
+<td>“abc”</td>
+<td>String</td>
+</tr>
+<tr>
+<td>false</td>
+<td>Boolean</td>
+</tr>
+<tr>
+<td>null</td>
+<td>Object</td>
+</tr>
+<tr>
+<td>undefined</td>
+<td>Undefined</td>
+</tr>
+</tbody>
+</table>
+<ul>
 <li>hasOwnProperty可以被重写覆盖</li>
 <li>js中的对象永远不会是真的空对象</li>
 </ul>
