--- a/demo/index.html
+++ b/demo/index.html
@@ -38,32 +38,45 @@
 
   <main class="page">
   <div>
-    <p>自己实现的动画函数move.js <a href="https://github.com/Archmee/move.js" target="_blank" rel="external">github</a></p>
+    <p><strong>自己实现的动画函数move.js</strong> [<a href="https://github.com/Archmee/move.js" target="_blank" rel="external">github</a>]</p>
 <ul>
 <li>优点是兼容性好</li>
 <li>缺点是资源消耗大</li>
 </ul>
-<p>IFE任务 <a href="https://github.com/Archmee/IFE-2015-Spring-Task" target="_blank" rel="external">github</a></p>
+<p><strong>IFE任务</strong> [<a href="https://github.com/Archmee/IFE-2015-Spring-Task" target="_blank" rel="external">github</a>]</p>
 <ul>
-<li>一个静态博客 <a href="https://archmee.github.io/demo/show/ife_task_1_7/">show</a> <a href="https://github.com/Archmee/IFE-2015-Spring-Task/tree/master/ife_task_1_7" target="_blank" rel="external">github</a></li>
-<li>IFE任务2 <a href="https://github.com/Archmee/IFE-2015-Spring-Task/tree/master/ife_task_2" target="_blank" rel="external">github</a><ul>
-<li>一个通用库util.js实现，包括mini $、ajax、dom处理、和一些js缺失的功能函数 <a href="https://github.com/Archmee/IFE-2015-Spring-Task/blob/master/ife_task_2/js/util.js" target="_blank" rel="external">github</a></li>
-<li>兴趣列表 <a href="https://archmee.github.io/demo/show/ife_task_2/task0002_1.html">show</a></li>
-<li>倒计时 <a href="https://archmee.github.io/demo/show/ife_task_2/task0002_2.html">show</a></li>
-<li>面向对象的轮播 <a href="https://archmee.github.io/demo/show/ife_task_2/task0002_3.html">show</a></li>
-<li>模拟搜索框 <a href="https://archmee.github.io/demo/show/ife_task_2/task0002_4.html">show</a></li>
-<li>拖拽交互 <a href="https://archmee.github.io/demo/show/ife_task_2/task0002_5.html">show</a></li>
+<li>一个静态博客 [<a href="https://archmee.github.io/demo/show/ife_task_1_7/">show</a>] [<a href="https://github.com/Archmee/IFE-2015-Spring-Task/tree/master/ife_task_1_7" target="_blank" rel="external">github</a>]</li>
+<li>IFE任务2 [<a href="https://github.com/Archmee/IFE-2015-Spring-Task/tree/master/ife_task_2" target="_blank" rel="external">github</a>]<ul>
+<li>一个通用库util.js实现，包括mini $、ajax、dom处理、和一些js缺失的功能函数 [<a href="https://github.com/Archmee/IFE-2015-Spring-Task/blob/master/ife_task_2/js/util.js" target="_blank" rel="external">github</a>]</li>
+<li>兴趣列表 [<a href="https://archmee.github.io/demo/show/ife_task_2/task0002_1.html">show</a>]</li>
+<li>倒计时 [<a href="https://archmee.github.io/demo/show/ife_task_2/task0002_2.html">show</a>]</li>
+<li>面向对象的轮播 [<a href="https://archmee.github.io/demo/show/ife_task_2/task0002_3.html">show</a>]</li>
+<li>模拟搜索框 [<a href="https://archmee.github.io/demo/show/ife_task_2/task0002_4.html">show</a>]</li>
+<li>拖拽交互 [<a href="https://archmee.github.io/demo/show/ife_task_2/task0002_5.html">show</a>]</li>
 </ul>
 </li>
-<li>一个任务管理工具-PC <a href="https://archmee.github.io/demo/show/ife_task_3">show</a></li>
-<li>一个任务管理工具-适配移动端 <a href="https://archmee.github.io/demo/show/ife_task_4">show</a></li>
-<li>优化后的任务管理工具 <a href="https://archmee.github.io/demo/show/ife_task_5">show</a></li>
+<li>一个任务管理工具-PC [<a href="https://archmee.github.io/demo/show/ife_task_3">show</a>]</li>
+<li>一个任务管理工具-适配移动端 [<a href="https://archmee.github.io/demo/show/ife_task_4">show</a>]</li>
+<li>优化后的任务管理工具 [<a href="https://archmee.github.io/demo/show/ife_task_5">show</a>]<br>扫码访问 <img src="https://archmee.github.io/demo/show/ife_task_5/ife_task_5.png" alt="todo"></li>
 </ul>
-<p><a href="https://archmee.github.io/demo/show/imooc-nav.html">仿慕课网导航</a><br><a href="https://archmee.github.io/demo/show/shoufengqin/">手风琴效果</a><br><a href="https://archmee.github.io/demo/show/lunbo/">简易轮播效果</a><br><a href="https://archmee.github.io/demo/show/dropdown-menu/">几款漂亮的菜单效果</a></p>
-<p>CSS3 Demo（来自一个国外一个博客，但是是按照自己的思路实现）<br><a href="https://archmee.github.io/demo/show/css3/bangbangtang.html">催眠棒棒糖</a><br><a href="https://archmee.github.io/demo/show/css3/animation-bounce.html">字体弹出</a><br><a href="https://archmee.github.io/demo/show/css3/animation-circle.html">跳球</a><br><a href="https://archmee.github.io/demo/show/css3/animation-heart.html">Heart</a><br><a href="https://archmee.github.io/demo/show/css3/animation-puke.html">旋转扑克</a><br><a href="https://archmee.github.io/demo/show/css3/animation-rain.html">天气</a></p>
-<blockquote>
-<p>以上代码特殊说明，均使用原生语言开发</p>
-</blockquote>
+<p><strong>其他</strong></p>
+<ul>
+<li><a href="https://archmee.github.io/demo/show/imooc-nav.html">仿慕课网导航</a></li>
+<li><a href="https://archmee.github.io/demo/show/shoufengqin/">手风琴效果</a></li>
+<li><a href="https://archmee.github.io/demo/show/lunbo/">简易轮播效果</a></li>
+<li><a href="https://archmee.github.io/demo/show/dropdown-menu/">几款漂亮的菜单效果</a></li>
+</ul>
+<p>PS：以上代码特殊说明，均使用原生语言开发</p>
+<p><strong>CSS3 Demo</strong></p>
+<ul>
+<li><a href="https://archmee.github.io/demo/show/css3/bangbangtang.html">催眠棒棒糖</a></li>
+<li><a href="https://archmee.github.io/demo/show/css3/animation-bounce.html">字体弹出</a></li>
+<li><a href="https://archmee.github.io/demo/show/css3/animation-circle.html">跳球</a></li>
+<li><a href="https://archmee.github.io/demo/show/css3/animation-heart.html">Heart</a></li>
+<li><a href="https://archmee.github.io/demo/show/css3/animation-puke.html">旋转扑克</a></li>
+<li><a href="https://archmee.github.io/demo/show/css3/animation-rain.html">天气</a></li>
+</ul>
+<p>PS：有几个动画原型来自国外的一个博客，但是是按照自己的思路实现</p>
 
   </div>
 </main>
