--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 
   <main class="page">
   <div>
-    <p>我以前做后端开发，差不多有一年左右时间，主要是基于PHP以及PHP的框架CodeIgniter。</p>
+    <p>我以前做后端开发，差不多有一年左右时间，主要是基于PHP以及PHP的MVC框架CodeIgniter。</p>
 <p>现在转向前端开发，一切才刚刚开始。</p>
 
   </div>
