--- a/demo/index.html
+++ b/demo/index.html
@@ -57,7 +57,9 @@
 </li>
 <li>一个任务管理工具-PC [<a href="https://archmee.github.io/demo/show/ife_task_3">show</a>]</li>
 <li>一个任务管理工具-适配移动端 [<a href="https://archmee.github.io/demo/show/ife_task_4">show</a>]</li>
-<li>优化后的任务管理工具 [<a href="https://archmee.github.io/demo/show/ife_task_5">show</a>]<br>扫码访问 <img src="https://archmee.github.io/demo/show/ife_task_5/ife_task_5.png" alt="todo"></li>
+<li><p>优化后的任务管理工具 [<a href="https://archmee.github.io/demo/show/ife_task_5">show</a>]</p>
+<p><img src="https://archmee.github.io/demo/show/ife_task_5/ife_task_5.png" alt="todo"><br>可扫码访问</p>
+</li>
 </ul>
 <p><strong>其他</strong></p>
 <ul>
