--- a/demo/index.html
+++ b/demo/index.html
@@ -38,8 +38,7 @@
 
   <main class="page">
   <div>
-    <p>PS：以下代码特殊说明，均使用原生语言开发</p>
-<p><strong>自己实现的动画函数move.js</strong> [<a href="https://github.com/Archmee/move.js" target="_blank" rel="external">github</a>]</p>
+    <p><strong>自己实现的动画函数move.js</strong> [<a href="https://github.com/Archmee/move.js" target="_blank" rel="external">github</a>]</p>
 <ul>
 <li>优点是兼容性好，优化后支持requestAnimationFrame技术，否则使用定时器</li>
 <li>缺点是资源消耗大，针对现代浏览器最好使用CSS3</li>
@@ -82,6 +81,7 @@
 <li><a href="https://archmee.github.io/demo/show/lunbo/">简易轮播效果</a></li>
 <li><a href="https://archmee.github.io/demo/show/dropdown-menu/">几款漂亮的菜单效果</a></li>
 </ul>
+<p>PS：以上代码如无特殊说明，均使用原生语言开发</p>
 <p><strong>CSS3 Demo</strong></p>
 <ul>
 <li><a href="https://archmee.github.io/demo/show/css3/bangbangtang.html">催眠棒棒糖</a></li>
