--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   
     <article>
       <h1 class="article-title">
-        <a href="/201704/2017-04-21.html">前端之旅：es6 和 mocha</a>
+        <a href="/201704/2017-04-21.html">前端之旅：ES6 和 Mocha</a>
       </h1>
 
       <div class="article-entry">
